--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.4
+  google_mobile_ads: ^1.2.1
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
